// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/updates/generate generateBranchConfig() adds commit message body 1`] = `
"Update dependency some-dep to v1.2.0

[skip-ci]"
`;

exports[`workers/repository/updates/generate generateBranchConfig() handles @types specially (reversed) 1`] = `
Object {
  "automerge": false,
  "blockedByPin": false,
  "branchName": "some-branch",
  "commitMessage": "",
  "constraints": Object {},
  "depName": "some-dep",
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayTo": "0.6.0",
  "newValue": "0.6.0",
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "releaseTimestamp": undefined,
  "reuseLockFiles": true,
  "upgrades": Array [
    Object {
      "branchName": "some-branch",
      "commitMessage": "",
      "depName": "some-dep",
      "displayFrom": "",
      "displayTo": "0.6.0",
      "newValue": "0.6.0",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
    },
    Object {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "datasource": "npm",
      "depName": "some-dep",
      "displayFrom": "",
      "displayTo": "1.0.0",
      "newValue": "1.0.0",
      "prTitle": "some-other-title",
      "prettyDepType": "dependency",
    },
    Object {
      "branchName": "some-branch",
      "commitMessage": "",
      "depName": "@types/some-dep",
      "displayFrom": "",
      "displayTo": "0.5.7",
      "newValue": "0.5.7",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() handles @types specially 1`] = `
Object {
  "automerge": false,
  "blockedByPin": false,
  "branchName": "some-branch",
  "commitBodyTable": true,
  "commitMessage": "

| datasource | package         | from  | to    |
| ---------- | --------------- | ----- | ----- |
| npm        | @types/some-dep | 0.5.7 | 0.5.8 |
",
  "constraints": Object {},
  "datasource": "npm",
  "depName": "some-dep",
  "dependencyDashboardApproval": false,
  "dependencyDashboardPrApproval": false,
  "displayFrom": "",
  "displayTo": "0.6.0",
  "hasTypes": true,
  "isRange": false,
  "newValue": "0.6.0",
  "prTitle": "some-title",
  "prettyDepType": "dependency",
  "recreateClosed": false,
  "releaseTimestamp": undefined,
  "reuseLockFiles": true,
  "upgrades": Array [
    Object {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "datasource": "npm",
      "depName": "some-dep",
      "displayFrom": "",
      "displayTo": "0.6.0",
      "isRange": false,
      "newValue": "0.6.0",
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "recreateClosed": false,
    },
    Object {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "datasource": "npm",
      "depName": "some-dep",
      "displayFrom": "",
      "displayTo": "1.0.0",
      "isRange": false,
      "newValue": "1.0.0",
      "prTitle": "some-other-title",
      "prettyDepType": "dependency",
    },
    Object {
      "branchName": "some-branch",
      "commitBodyTable": true,
      "commitMessage": "",
      "currentValue": "0.5.7",
      "currentVersion": "0.5.7",
      "datasource": "npm",
      "depName": "@types/some-dep",
      "displayFrom": "0.5.7",
      "displayTo": "",
      "isRange": false,
      "prTitle": "some-title",
      "prettyDepType": "dependency",
      "toVersion": "0.5.8",
    },
  ],
}
`;

exports[`workers/repository/updates/generate generateBranchConfig() handles upgrades 1`] = `"some-title (patch)"`;

exports[`workers/repository/updates/generate generateBranchConfig() supports manual prTitle 1`] = `"upgrade some-dep"`;
